# foreman-revops

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  scheduler.py  seed_demo.py
.github/: SECURITY.md
.github/workflows/: ci.yml
.streamlit/: config.toml
foreman_optimizer/: CLAUDE.md  README.md  __init__.py  categories.py  demo.py  fingerprint.py  ir.py  pipeline.py  rules.py
src/: db.py  demo.py  models.py
src/analytics/: burn_map.py  classifier.py  content_policy.py  executive.py  finance.py  intelligence.py  llm_classifier.py  mcp_usage.py  pricing.py
src/parsers/: anthropic.py  base.py  gemini.py  generic.py  openai.py
src/polling/: anthropic.py  base.py  cursor.py  gemini.py  key_store.py  openai.py  scheduler.py
src/ui/: api_poll.py  bill_analyzer.py  burn_map.py  classifier.py  entry.py  exec_brief.py  finance.py  intelligence.py  optimizer.py  settings.py  theme.py
tests/: test_analytics.py  test_burn_map.py  test_db.py  test_executive.py  test_finance_security.py  test_key_store_security.py  test_llm_classifier.py  test_mcp_server.py  test_mcp_usage.py  test_optimizer.py  test_parsers.py  test_polling.py  test_pricing.py  test_scheduler.py  test_ui_exec_brief.py  test_ui_optimizer.py
